[tool.poetry]
name = "dfenocde"
version = "0.1.0"
description = ""
authors = ["JBinkowski <jan.binkowski96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
prefect = "^2.13.0"
setuptools = "^68.2.0"
wheel = "^0.41.2"
deeptools = "^3.5.3"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.5"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
